# haskell-checklist

./: README.md  template-builder.cabal
hsfiles/: library.hsfiles
pieces/: .gitignore  CHANGELOG.md  LICENSE  README.md  Setup.hs  stack.yaml  {{name}}.cabal
pieces/benchmarks/: bench.hs
pieces/src/: Library.hs
pieces/tests/: doctests.hs
src/: Main.hs
templates/: library.txt
